--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    background-color: '#F9FAFB';
+@layer base {
+    body {
+        @apply bg-gray-50;
+    }
 }
