--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -9,7 +9,7 @@
 
 @layer components {
     .btn-primary {
-        @apply bg-blue-500 px-4 py-2 text-white rounded text-lg  hover:bg-blue-600;
+        @apply bg-blue-500 px-4 py-2 text-white rounded text-base hover:bg-blue-600;
     }
 
     .btn-secondary {
